[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttkbootstrap"
version = "2.0.0a1"
description = "A supercharged theme extension for tkinter that enables on-demand modern flat style themes inspired by Bootstrap."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Israel Dryer", email = "israel.dryer@gmail.com" }
]
keywords = [
    "tkinter",
    "theme",
    "ttk",
    "bootstrap",
    "gui",
    "desktop",
    "python3",
    "ui",
    "widgets",
    "theming",
    "cross-platform",
    "modern",
    "responsive",
    "python-gui"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: User Interfaces",
    "Operating System :: OS Independent",
]

dependencies = [
    "pillow>=10,<=12",
    "ttkbootstrap-icons>=4",

    # Runtime localization/formatting stack
    "Babel>=2.12",
    "python-dateutil>=2.8",
    "dateparser>=1.1",
]

[project.optional-dependencies]

[project.urls]
Homepage = "https://github.com/israel-dryer/ttkbootstrap"
Documentation = "https://ttkbootstrap.readthedocs.io/en/latest/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ttkbootstrap" = [
    "themes/*.json",
    "assets/*",
    # ship compiled gettext catalogs within the package
    "assets/locales/**/LC_MESSAGES/*.mo",
]

