[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttkbootstrap"
version = "2.0.0a1"
description = "A supercharged theme extension for tkinter that enables on-demand modern flat style themes inspired by Bootstrap."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Israel Dryer", email = "israel.dryer@gmail.com" }
]
keywords = [
    "tkinter",
    "theme",
    "ttk",
    "bootstrap",
    "gui",
    "desktop",
    "python3",
    "ui",
    "widgets",
    "theming",
    "cross-platform",
    "modern",
    "responsive",
    "python-gui"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: User Interfaces",
    "Operating System :: OS Independent",
]

dependencies = [
    "pillow>=10,<=12",
    "ttkbootstrap-icons>=4",
    "ttkbootstrap-icons-bs>=1",

    # Runtime localization/formatting stack
    "Babel>=2.12",
    "python-dateutil>=2.8",
    "dateparser>=1.1",

    # TOML parsing for Python < 3.11
    "tomli>=2.0; python_version < '3.11'",

    # Windows-specific: modern window effects (mica, acrylic, etc.)
    "pywinstyles>=1.8; sys_platform == 'win32'",

    # Multi-monitor support for proper window centering
    "screeninfo>=0.8",
]

[project.optional-dependencies]

[project.urls]
Homepage = "https://github.com/israel-dryer/ttkbootstrap"
Documentation = "https://ttkbootstrap.readthedocs.io/en/latest/"

[project.scripts]
ttkb = "ttkbootstrap.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ttkbootstrap" = [
    "themes/*.json",
    "assets/*",
    # ship compiled gettext catalogs within the package
    "assets/locales/**/LC_MESSAGES/*.mo",
]

# -----------------------------------------------------------------------------
# Ruff: docstring discipline on the public API surface.
#
# `D` rules with the Google convention enforce presence and style of docstrings
# on public modules, classes, methods, and functions. The intent is for every
# symbol in `_MODULE_EXPORTS` (see `src/ttkbootstrap/__init__.py`) and the
# files that define them to have spec-grade docstrings. Internal directories
# are blanket-ignored. Files awaiting cleanup are listed individually so the
# entry can be removed (and the file enforced) once its docstrings conform.
#
# Convention and template: see `analysis/docs-review-and-plan.md`.
#
# Run locally:
#   ruff check --select D src/ttkbootstrap
#
# To clean a file: bring its docstrings up to spec, run the command above
# scoped to that file, and remove the per-file ignore once it passes.
# -----------------------------------------------------------------------------

[tool.ruff]
src = ["src"]
target-version = "py310"

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Internal directories — not part of the public API surface.
"src/ttkbootstrap/style/builders/**" = ["D"]
"src/ttkbootstrap/style/builders_tk/**" = ["D"]
"src/ttkbootstrap/widgets/mixins/**" = ["D"]
"src/ttkbootstrap/widgets/internal/**" = ["D"]
"src/ttkbootstrap/widgets/parts/**" = ["D"]
"src/ttkbootstrap/core/capabilities/**" = ["D"]
"src/ttkbootstrap/core/mixins/**" = ["D"]
"src/ttkbootstrap/cli/**" = ["D"]
"src/ttkbootstrap/assets/**" = ["D"]
"tests/**" = ["D"]
"docs_scripts/**" = ["D"]
"development/**" = ["D"]
"tools/**" = ["D"]

# Public-surface files awaiting docstring cleanup.
# Remove the entry when `ruff check --select D <file>` is clean.
"src/ttkbootstrap/runtime/app.py" = ["D"]
"src/ttkbootstrap/runtime/utility.py" = ["D"]
"src/ttkbootstrap/dialogs/colorchooser.py" = ["D"]
"src/ttkbootstrap/style/bootstyle_builder_base.py" = ["D"]
"src/ttkbootstrap/style/bootstyle_builder_tk.py" = ["D"]
"src/ttkbootstrap/style/bootstyle_builder_ttk.py" = ["D"]
"src/ttkbootstrap/style/element.py" = ["D"]
"src/ttkbootstrap/style/theme_provider.py" = ["D"]
"src/ttkbootstrap/style/typography.py" = ["D"]
"src/ttkbootstrap/style/utility.py" = ["D"]
"src/ttkbootstrap/core/colorutils.py" = ["D"]
"src/ttkbootstrap/core/publisher.py" = ["D"]
"src/ttkbootstrap/widgets/composites/accordion.py" = ["D"]
"src/ttkbootstrap/widgets/composites/appshell.py" = ["D"]
"src/ttkbootstrap/widgets/composites/buttongroup.py" = ["D"]
"src/ttkbootstrap/widgets/composites/compositeframe.py" = ["D"]
"src/ttkbootstrap/widgets/composites/contextmenu.py" = ["D"]
"src/ttkbootstrap/widgets/composites/dropdownbutton.py" = ["D"]
"src/ttkbootstrap/widgets/composites/field.py" = ["D"]
"src/ttkbootstrap/widgets/composites/floodgauge.py" = ["D"]
"src/ttkbootstrap/widgets/composites/labeledscale.py" = ["D"]
"src/ttkbootstrap/widgets/composites/menubar.py" = ["D"]
"src/ttkbootstrap/widgets/composites/meter.py" = ["D"]
"src/ttkbootstrap/widgets/composites/pagestack.py" = ["D"]
"src/ttkbootstrap/widgets/composites/radiogroup.py" = ["D"]
"src/ttkbootstrap/widgets/composites/toast.py" = ["D"]
"src/ttkbootstrap/widgets/composites/togglegroup.py" = ["D"]
"src/ttkbootstrap/widgets/composites/toolbar.py" = ["D"]
"src/ttkbootstrap/widgets/composites/tooltip.py" = ["D"]
"src/ttkbootstrap/widgets/composites/list/listitem.py" = ["D"]
"src/ttkbootstrap/widgets/composites/sidenav/group.py" = ["D"]
"src/ttkbootstrap/widgets/composites/sidenav/header.py" = ["D"]
"src/ttkbootstrap/widgets/composites/sidenav/item.py" = ["D"]
"src/ttkbootstrap/widgets/composites/sidenav/separator.py" = ["D"]
"src/ttkbootstrap/widgets/composites/sidenav/view.py" = ["D"]
"src/ttkbootstrap/widgets/composites/tableview/tableview.py" = ["D"]
"src/ttkbootstrap/widgets/primitives/badge.py" = ["D"]
"src/ttkbootstrap/widgets/primitives/card.py" = ["D"]
"src/ttkbootstrap/widgets/primitives/checkbutton.py" = ["D"]
"src/ttkbootstrap/widgets/primitives/checktoggle.py" = ["D"]
"src/ttkbootstrap/widgets/primitives/entry.py" = ["D"]
"src/ttkbootstrap/widgets/primitives/gridframe.py" = ["D"]
"src/ttkbootstrap/widgets/primitives/labelframe.py" = ["D"]
"src/ttkbootstrap/widgets/primitives/menubutton.py" = ["D"]
"src/ttkbootstrap/widgets/primitives/notebook.py" = ["D"]
"src/ttkbootstrap/widgets/primitives/packframe.py" = ["D"]
"src/ttkbootstrap/widgets/primitives/panedwindow.py" = ["D"]
"src/ttkbootstrap/widgets/primitives/progressbar.py" = ["D"]
"src/ttkbootstrap/widgets/primitives/radiobutton.py" = ["D"]
"src/ttkbootstrap/widgets/primitives/radiotoggle.py" = ["D"]
"src/ttkbootstrap/widgets/primitives/scale.py" = ["D"]
"src/ttkbootstrap/widgets/primitives/scrollbar.py" = ["D"]
"src/ttkbootstrap/widgets/primitives/separator.py" = ["D"]
"src/ttkbootstrap/widgets/primitives/sizegrip.py" = ["D"]
"src/ttkbootstrap/widgets/primitives/spinbox.py" = ["D"]
"src/ttkbootstrap/widgets/primitives/switch.py" = ["D"]